# cmake_template

./: .clangd  CMakeLists.txt  README.md
.github/workflows/: gh_pages_deploy.yml
doc/: CMakeLists.txt
src/: CMakeLists.txt  sample_add.c  sample_sub.cc  sample_sub.hpp
src/include/: sample_add.h
test/: CMakeLists.txt  test.cc
